
ASSERTION FUNCTIONS
- assertArrayEquals(array1, array2) introduced
- assertObjectEquals(object1, object2) introduced
- assertHTMLEquals function introduced
- assertEvaluatesToTrue and assertEvaluatesToFalse introduced
- assertHashEquals     }
- assertRoughlyEquals  } Pivotal functions
- assertContains       }

CLIENT-SIDE
- changed expected/actual values display strings to use angle brackets, rather than square brackets
- HTML in result output is now correctly escaped
- page load timeout changed to 10 seconds by default
- setup page timeout change to 10 seconds by default
- cache-buster for testpage retrieval & results submission
- jsUnitRestoredHTMLDiv
- turn off tracing, alerts, confirms when submitting
- testPage parameter should be URL-encoded (only opera cares though)
- Speed-up of Firefox/Mozilla (thanks to Chris Wesseling)
- jsUnitMockTimeout.js (thanks to Pivotal, especially Nathan Wilmes)
- new "Stop" button for stopping test runs
- new "Show log" button for showing a log of the test run
- new "suppressDialogs" URL parameter for suppressing dialogs in interactive mode
- new "setupPageTimeout" and "pageLoadTimeout" URL parameters for setting timeouts
- jsUnitTestSuite constructor now takes a list of test pages and/or suites as an alternative to calling addTestPage() and addTestSuite():
    new jsUnitTestSuite("/path/to/page1.html", subsuite, "/path/to/page2.html");

SERVER
- start-browser scripts in bin
- Migration of Java code to require Java 5.0
- StandaloneTest and DistributedTest continue on after a failure in a particular browser or remote server respectively
- StandaloneTest has a suite() method that makes the test run have multiple JUnit tests, one per browser
- DistribuedTest has a suite() method that makes the test run have multiple JUnit tests, one per remote machine URL
- Change to XML output format of test runs to include more information and be more hierarchical (machine->browser->test page->test case)